test/units/ParseSpec/valid/expr/implicit-let-2.algst
let ?abc = 42 in ()
