test/units/ParseSpec/invalid/expr/double-bind-let.algst
let (a, a) = global in a
